--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,18 @@ icon="res://icon.png"
 
 [display]
 
+fullscreen=true
+use_vsync=true
+use_2d_pixel_snap=true
 driver="GLES2"
 width=1024
 height=600
+
+[render]
+
+thread_model=2
+
+[vsync]
+
+thread_model=false
+=false
