--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,8 @@
 [application]
 
 name="9g"
-main_scene="res://menu.tscn"
-icon="res://icon.png"
+main_scene="res://scene/menu/menu.tscn"
+icon="res://image/icon.png"
 
 [display]
 
