Added weapon selection, global loadouts, and a next button.

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="9g"
 main_scene="res://scene/menu/menu.tscn"
 icon="res://image/icon.png"
 
+[autoload]
+
+global="*res://global.gd"
+
 [display]
 
 fullscreen=true
